# test-training

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: 1-guide.md  2-tutorial-sprint.md  3-sprint.md  3-sprint_1.md  4-sprint.md  4-sprint_2.md  5-sprint_3.md  5-sprint_4.md  97-requirements.md  98-viewpoints.md  99-appendix.md  99-testcase-example.md  index.md
docs/appendix/: design-review-template.md  evaluation-rubric.md  requirements-review-template.md  test-analysis-template.md  test-design-template.md  usability-test-script.md
docs/guide/: cicd.md  deliverables.md  index.md  review-checkpoints.md  sprint-flow.md
docs/javascripts/: mermaid.js
docs/overview/: shift-left.md
docs/setup/: calculator-app.md  environment.md
docs/sprints/: sprint-0.md  sprint-1.md  sprint-2.md  sprint-3.md
docs/sprints/sprint-0/: design.md  development.md  index.md  requirements.md  retrospective.md  testing.md
docs/sprints/sprint-1/: cicd.md  design-review.md  development.md  index.md  requirements-review.md  retrospective.md  usability-test.md
docs/sprints/sprint-2/: cicd.md  design-review.md  development.md  index.md  requirements-review.md  retrospective.md  usability-test.md
docs/sprints/sprint-3/: cicd.md  design-review.md  development.md  index.md  requirements-review.md  retrospective.md  usability-test.md
docs/stylesheets/: extra.css
scripts/: check.sh  install-vscode-extensions.sh  run-calculator-app.sh  setup.sh
src/training/: __init__.py  app.py  calculator.py
tests/: test_app.py  test_calculator.py
