[project]
name = "python-training"
version = "0.1.0"
description = "Python development exercises managed with uv."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a22",
    "zensical>=0.0.43",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.src]
include = ["src", "tests"]
